Bug 464381 - FxKeyLookup maps only from String to int.
Signed-off-by: Michał Bocian <mbocian@psi.pl>